test/sema/non-bool-if-condition.delta.output
non-bool-if-condition.delta:5:9: error: 'if' condition must have type 'bool' or optional type
    if (0) {}
        ^
