test/sema/non-bool-if-condition.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:9: error: 'if' condition must have type 'bool'
    if (0) {}
}
